# xls2txt

./: .gitignore  Cargo.toml  README  TODO
src/: lib.rs  main.rs
tests/: cli.rs  input.xlsx
