[package]
name = "xls2txt"
description = "Command-line utility to convert stylesheets (ODS or excel) to text"
version = "1.0.0"
authors = ["Masklinn <masklinn@masklinn.net>"]
license = "Apache-2.0"

repository = "https://github.com/masklinn/xls2txt"

edition = "2018"

categories = [
    "command-line-utilities",
    "encoding",
]
keywords = ["xls2csv", "xls2txt", "xls", "ods", "csv"] # up to 5

[dependencies]
calamine = "0.16"
csv = "1.1"
clap = "2.23"

[replace]
# calamine 0.16 only keeps ordering of ODS, not XLS*, use fork until
# it's (hopefully) merged
"calamine:0.16.0" = { git = "https://github.com/masklinn/calamine" }
