[package]
name = "xls2txt"
description = "Command-line utility to convert stylesheets (ODS or excel) to text"
readme = "README"
version = "1.2.0"
authors = ["Masklinn <masklinn@masklinn.net>"]
license = "Apache-2.0"

repository = "https://github.com/masklinn/xls2txt"

edition = "2021"

categories = [
    "command-line-utilities",
    "encoding",
]
keywords = ["xls2csv", "xls2txt", "xls", "ods", "csv"] # up to 5

[dependencies]
calamine = "0.19.1"
csv = "1.1"
clap = { version = "4.0", features = ["cargo", "derive"] }
guard = "0.5.1"
