[package]
name = "xls2txt"
description = "Command-line utility to convert stylesheets (ODS or excel) to text"
readme = "README"
version = "1.2.1"
authors = ["Masklinn <masklinn@masklinn.net>"]
license = "Apache-2.0"

repository = "https://github.com/masklinn/xls2txt"

edition = "2021"

categories = [
    "command-line-utilities",
    "encoding",
]
keywords = ["xls2csv", "xls2txt", "xls", "ods", "csv"] # up to 5

[dependencies]
calamine = "0.20"
csv = "1.2"
clap = { version = "4.1", features = ["cargo", "derive"] }
guard = "0.5"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
